# NPSpec

./: .gitignore  .hgignore  CMakeLists.txt  MANIFEST  MANIFEST.in  NPSolveModule.f90  README  README.md  _n_p_spec_module_8f90.html  annotated.html  build.html  buildpage.html  citelist.html  class_nanoparticle-members.html  class_nanoparticle.html  classes.html  classnpspecmodule.html  constants_8h.html  constants_8h_source.html  dir_32ce493b971567efa4152cee330054e6.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_cf666520f8168492704bdb73c2dc853a.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f652945e16b65a4f782741a47a71b12f.html  distclean  distclean.cmake  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  modulenpspecmodule-members.html  nanoparticle_8hpp.html  nanoparticle_8hpp_source.html  (+11 more)
cmake/Modules/: CMakeAddFortranSubdirectory.cmake  CheckFortranSupportsIsoCBinding.cmake  FindPythonModule.cmake  SetCXXFlags.cmake  SetCompileFlag.cmake
doc/: Doxyfile  build.dox  examples.dox  mainpage.dox  theory.dox
doc/bib/: thesis_bib.bib
extensions/: NPSolveModule.f90  npsolvemodule.mod  pyNPSolve.c
include/: CMakeLists.txt  NPSolve.h  NPSolveModule.f90  NPSpec.h  NPSpecModule.f90  constants.h  material_parameters.h  nanoparticle.h  solvers.h  standard_color_matching.h  version.h
include/npspec/: NPSpecModule.f90  constants.h  nanoparticle.h  nanoparticle.hpp  npspec.h  version.h
include/npspec/private/: material_parameters.h  material_parameters.hpp  solvers.hpp
python/npspec/: __init__.py  npspec.i  npspec.py  npspec_wrap.cpp
python/npspec/tests/: test_constants.py  test_nanoparticle.py
search/: all_61.js  all_62.js  all_63.js  all_65.js  all_69.js  all_6d.js  all_6e.js  all_72.js  all_73.js  all_75.js  all_77.js  classes_6e.js  defines_6e.js  enums_65.js  enums_6e.js  enums_73.js  enumvalues_61.js  enumvalues_63.js  enumvalues_65.js  enumvalues_69.js  enumvalues_6d.js  enumvalues_6e.js  enumvalues_73.js  enumvalues_75.js  files_6e.js  functions_63.js  functions_67.js  functions_6d.js  functions_6e.js  functions_73.js  pages_65.js  pages_6e.js  pages_77.js  search.js  variables_61.js  variables_63.js  variables_65.js  variables_69.js  variables_6d.js  variables_6e.js  (+2 more)
src/: CMakeLists.txt  calculate_color.cpp  drude_parameters.cpp  experimental_dielectrics.cpp  material_index.cpp  mie.cpp  nanoparticle.cpp  npsolve.cpp  npspec.cpp  quasi.cpp  standard_color_matching.cpp  wavelengths.cpp
src/npspec/: CMakeLists.txt  calculate_color.cpp  drude_parameters.cpp  experimental_dielectrics.cpp  material_index.cpp  mie.cpp  nanoparticle.cpp  npspec.cpp  quasi.cpp  standard_color_matching.cpp
src/python/: pyNPSolve.c  pyNPSpec.c
src/python/npspec/: npspec.i
src/test/: CMakeLists.txt  test_c.c  test_fortran_wrapper.f90  test_nanoparticle.cpp  test_npsolve.cpp  test_npspec.cpp  verify_npsolve.cpp
src/test/fruit/: CMakeLists.txt
src/test/fsolve/: CMakeLists.txt  mie.f90  quasi.f90
test/: CMakeLists.txt  Makefile  fruit_driver.f90  main.c  main.cpp  main.f90  ptest  test_fortran_wrapper.f90  test_npsolve.cpp  verify_npsolve.cpp
test/fsolve/: CMakeLists.txt  distclean  mie.f90  quasi.f90
